<resources>
    <string name="app_name">OpenEyes</string>

    <string name="common_click_double_to_exit_app">再按一次退出应用~</string>
    <string name="common_error_network">网络异常，请检查网络~</string>
    <string name="common_error_service">请稍后，服务异常~</string>
    <string name="login_error_grant_refused">当前账号在别处设备登录，请注意账号使用安全</string>

    <string name="title_home">每日精选</string>
    <string name="title_discovery">发现</string>
    <string name="title_hot">热门</string>
    <string name="title_mine">我的</string>

    <string name="video_offline">缓存</string>
    <string name="video_attention">+ 关注</string>
    <string name="video_end"> - The End-</string>

    <string name="category_title">全部分类</string>
    <string name="hot_title">人气榜</string>
    <string name="about">关于</string>

    <string name="search_transition_name">transition_reveal</string>
    <string name="search_hint_text">帮你找到感兴趣的视频</string>
    <string name="search_title_tip">输入标题或描述中的关键词找到更多视频</string>
    <string name="search_hot_keywords_tip">- 热门搜索词 -</string>
    <string name="search_result_count">-「%1$s」搜索结果共%2$d个-</string>

    <string name="cancel">取消</string>

    <string name="nickname">Jacky</string>
    <string name="view_homepage">查看个人主页 ></string>

    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_attention">我的关注</string>
    <string name="mine_cache">我的缓存</string>
    <string name="view_history">观看记录 ></string>
    <string name="feedback">意见反馈</string>

    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="splash_text">每日精选视频，让你大开眼界</string>

    <string name="copy_right_notice">内容部分数据归原公司《开眼Eyepetizer》版权所有</string>
    <string name="not_use_commercial">本APP只供学习交流和研究之用，\n请勿用作商业用途！</string>
    <string name="since">copyright ©2017 Xiho.</string>
    <string name="gitHub">GitHub</string>
    <string name="recycle_footer_no_more_string">-- 我是有底线的 --</string>

    <string name="discover_tab_title_attention">关注</string>
    <string name="discover_tab_title_classify">分类</string>

    <string name="hot_tab_title_week">周排行</string>
    <string name="hot_tab_title_month">月排行</string>
    <string name="hot_tab_title_total">总排行</string>
</resources>
