<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundColor"
        android:transitionName="@string/search_transition_name"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingEnd="10dp">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/tv_cancel"
                    android:background="@drawable/shape_search_bg"
                    android:drawableStart="@drawable/ic_action_search_small"
                    android:drawablePadding="5dp"
                    android:hint="@string/search_hint_text"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/color_9a9a9a"
                    android:textColorHint="@color/color_darker_gray"
                    android:textCursorDrawable="@drawable/shape_search_et_cursor"
                    android:textSize="12sp"/>

                <ImageButton
                    android:id="@+id/ib_cancel"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignTop="@+id/et_search"
                    android:layout_alignEnd="@+id/et_search"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:src="@drawable/ic_action_clear"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/cancel"/>
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/ll_hot_word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_title_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/search_title_tip"
                android:textColor="@color/color_darker_gray"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_hot_search_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="@string/search_hot_keywords_tip"
                android:textColor="@color/color_black"
                android:textSize="14sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rlv_hot_word"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_result_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_search_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/search_result_count"
                android:textColor="@color/color_black"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rlv_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>