<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_title_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_black">

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/about"
            android:textColor="@color/color_item_title"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/web_hi_res_512"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/TextLinearStyle"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_common_d"
        android:text="@string/app_name"
        android:textColor="@color/color_black"
        android:textSize="@dimen/textSize_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"/>

    <TextView
        android:id="@+id/tv_version_name"
        style="@style/TextLinearStyle"
        android:layout_below="@+id/tv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_common_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        tools:text="v1.0.0"/>

    <FrameLayout
        android:id="@+id/rl_gitHub"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_title_bg"
        android:paddingStart="@dimen/padding_common_h"
        android:paddingEnd="@dimen/padding_common_h"
        app:layout_constraintTop_toBottomOf="@+id/tv_version_name">

        <TextView
            style="@style/TextLinearStyle"
            android:layout_gravity="center_vertical|start"
            android:paddingTop="@dimen/padding_common"
            android:paddingBottom="@dimen/padding_common"
            android:text="@string/gitHub"
            android:textColor="@color/color_black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_action_more_black"/>
    </FrameLayout>


    <TextView
        android:id="@+id/tv_not_use_commercial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_common_d"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/not_use_commercial"
        android:textColor="@color/color_9a9a9a"
        android:textSize="@dimen/textSize_small"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>